@@ -7,15 +7,19 @@ import org.frankframework.insights.branch.Branch;
 import org.frankframework.insights.branch.BranchService;
 import org.frankframework.insights.commit.Commit;
 import org.frankframework.insights.common.entityconnection.ReleaseCommit;
+import org.frankframework.insights.common.entityconnection.ReleasePullRequest;
 import org.frankframework.insights.common.entityconnection.branchcommit.BranchCommit;
+import org.frankframework.insights.common.entityconnection.branchpullrequest.BranchPullRequest;
 import org.frankframework.insights.common.mapper.Mapper;
 import org.frankframework.insights.github.GitHubClient;
 import org.frankframework.insights.github.GitHubRepositoryStatisticsService;
+import org.frankframework.insights.pullrequest.PullRequest;
 import org.springframework.stereotype.Service;
 
 @Service
 @Slf4j
 public class ReleaseService {
+
     private final GitHubRepositoryStatisticsService gitHubRepositoryStatisticsService;
     private final GitHubClient gitHubClient;
     private final Mapper mapper;
@@ -45,21 +49,23 @@ public class ReleaseService {
         try {
             log.info("Fetching GitHub releases...");
             Set<ReleaseDTO> releaseDTOs = gitHubClient.getReleases();
-            List<Branch> branches = branchService.getAllBranchesWithCommits();
+            List<Branch> branchesWithCommits = branchService.getBranchesWithCommits();
+            List<Branch> branchesWithPullRequests = branchService.getBranchesWithPullRequests(branchesWithCommits);
 
             List<Release> releasesWithBranches = releaseDTOs.stream()
-                    .map(dto -> createReleaseWithBranch(dto, branches))
+                    .map(dto -> createReleaseWithBranch(dto, branchesWithCommits))
                     .filter(Objects::nonNull)
-                    .toList();
+                    .collect(Collectors.toList());
 
             if (releasesWithBranches.isEmpty()) {
                 log.info("No releases with detected base branch to inject.");
                 return;
             }
 
-            Set<Release> releasesWithNewCommits = assignNewCommitsToReleases(releasesWithBranches);
+            Set<Release> releasesWithNewCommitsAndPRs =
+                    assignNewCommitsAndPRsToReleases(releasesWithBranches, branchesWithPullRequests);
 
-            saveAllReleases(releasesWithNewCommits);
+            saveAllReleases(releasesWithNewCommitsAndPRs);
         } catch (Exception e) {
             throw new ReleaseInjectionException("Error injecting GitHub releases.", e);
         }
@@ -75,7 +81,7 @@ public class ReleaseService {
         release.setBranch(findBranchForRelease(release, branches));
 
         if (release.getBranch() == null) {
-            log.warn("No matching branch found for release '{}'.", release.getTagName());
+            log.warn("No matching branch found for release '{}'.", dto.getTagName());
             return null;
         }
 
@@ -89,7 +95,8 @@ public class ReleaseService {
                 .orElse(null);
     }
 
-    private Set<Release> assignNewCommitsToReleases(List<Release> releases) {
+    private Set<Release> assignNewCommitsAndPRsToReleases(
+            List<Release> releases, List<Branch> branchesWithPullRequests) {
         Map<Branch, List<Release>> releasesByBranch = releases.stream()
                 .filter(release -> release.getBranch() != null)
                 .collect(Collectors.groupingBy(Release::getBranch));
@@ -100,44 +107,75 @@ public class ReleaseService {
             Branch branch = entry.getKey();
             List<Release> branchReleases = entry.getValue();
 
-            if (branch == null || branchReleases.isEmpty()) {
-                return new HashSet<>(branchReleases);
-            }
-
             branchReleases.sort(Comparator.comparing(Release::getPublishedAt));
 
-            TreeSet<Release> sortedReleases = new TreeSet<>(Comparator.comparing(Release::getPublishedAt));
+            Branch branchWithPRs = branchesWithPullRequests.stream()
+                    .filter(b -> b.getId().equals(branch.getId()))
+                    .findFirst()
+                    .orElse(branch);
 
             for (Release release : branchReleases) {
                 Set<Commit> newCommits = new HashSet<>();
-
-                Release previousRelease = sortedReleases.lower(release);
+                Set<PullRequest> newPullRequests = new HashSet<>();
+                Release previousRelease = branchReleases.stream()
+                        .filter(r -> r.getPublishedAt().isBefore(release.getPublishedAt()))
+                        .max(Comparator.comparing(Release::getPublishedAt))
+                        .orElse(null);
 
                 if (previousRelease == null) {
-                    newCommits.addAll(branch.getBranchCommits().stream()
-                            .map(BranchCommit::getCommit)
-                            .filter(commit -> !commit.getCommittedDate().isAfter(release.getPublishedAt()))
-                            .toList());
+                    newCommits.addAll(getCommitsBeforeRelease(branch, release));
+                    newPullRequests.addAll(getPullRequestsBeforeRelease(branchWithPRs, release));
                 } else {
-                    newCommits.addAll(branch.getBranchCommits().stream()
-                            .map(BranchCommit::getCommit)
-                            .filter(commit -> commit.getCommittedDate().isAfter(previousRelease.getPublishedAt())
-                                    && !commit.getCommittedDate().isAfter(release.getPublishedAt()))
-                            .toList());
+                    newCommits.addAll(getCommitsBetweenReleases(branch, previousRelease, release));
+                    newPullRequests.addAll(getPullRequestsBetweenReleases(branchWithPRs, previousRelease, release));
                 }
 
                 Set<ReleaseCommit> newReleaseCommits = newCommits.stream()
                         .map(commit -> new ReleaseCommit(release, commit))
                         .collect(Collectors.toSet());
 
+                Set<ReleasePullRequest> newReleasePullRequests = newPullRequests.stream()
+                        .map(pr -> new ReleasePullRequest(release, pr))
+                        .collect(Collectors.toSet());
+
                 release.setReleaseCommits(newReleaseCommits);
+                release.setReleasePullRequests(newReleasePullRequests);
 
                 updatedReleases.add(release);
-                sortedReleases.add(release);
             }
         }
 
         return updatedReleases;
+    }
+
+    private Set<Commit> getCommitsBeforeRelease(Branch branch, Release release) {
+        return branch.getBranchCommits().stream()
+                .map(BranchCommit::getCommit)
+                .filter(commit -> commit.getCommittedDate().isBefore(release.getPublishedAt()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<Commit> getCommitsBetweenReleases(Branch branch, Release previousRelease, Release release) {
+        return branch.getBranchCommits().stream()
+                .map(BranchCommit::getCommit)
+                .filter(commit -> commit.getCommittedDate().isAfter(previousRelease.getPublishedAt())
+                        && commit.getCommittedDate().isBefore(release.getPublishedAt()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<PullRequest> getPullRequestsBeforeRelease(Branch branch, Release release) {
+        return branch.getBranchPullRequests().stream()
+                .map(BranchPullRequest::getPullRequest)
+                .filter(pr -> pr.getMergedAt().isBefore(release.getPublishedAt()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<PullRequest> getPullRequestsBetweenReleases(Branch branch, Release previousRelease, Release release) {
+        return branch.getBranchPullRequests().stream()
+                .map(BranchPullRequest::getPullRequest)
+                .filter(pr -> pr.getMergedAt().isAfter(previousRelease.getPublishedAt())
+                        && pr.getMergedAt().isBefore(release.getPublishedAt()))
+                .collect(Collectors.toSet());
     }
 
     private void saveAllReleases(Set<Release> releases) {
