@@ -23,7 +23,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 public class CommitServiceTest {
-
     @Mock
     private GitHubProperties gitHubProperties;
 
@@ -49,6 +48,7 @@ public class CommitServiceTest {
     private CommitDTO mockCommitDTO;
     private Commit mockCommit;
     private GitHubRepositoryStatisticsDTO mockGitHubRepositoryStatisticsDTO;
+    private Map<String, Integer> gitHubCommitCounts;
 
     @BeforeEach
     public void setUp() {
@@ -64,16 +64,51 @@ public class CommitServiceTest {
         mockGitHubRepositoryStatisticsDTO = mock(GitHubRepositoryStatisticsDTO.class);
         when(gitHubRepositoryStatisticsService.getGitHubRepositoryStatisticsDTO())
                 .thenReturn(mockGitHubRepositoryStatisticsDTO);
+
+        gitHubCommitCounts = new HashMap<>();
+        gitHubCommitCounts.put(mockBranch.getName(), 10); // Assuming GitHub has 10 commits
     }
 
     @Test
     public void should_InjectCommitsForBranch_when_DatabaseIsNotFilledYet()
-            throws GitHubClientException, CommitInjectionException, MappingException {
-        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitCount(eq(Collections.emptyList())))
-                .thenReturn(10);
-        when(branchCommitRepository.count()).thenReturn(0L);
+            throws GitHubClientException, MappingException {
+        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitsCount(eq(Collections.emptyList())))
+                .thenReturn(gitHubCommitCounts);
+        when(branchCommitRepository.countBranchCommitByBranch(mockBranch)).thenReturn(0); // No commits in DB
         when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
         when(gitHubClient.getBranchCommits(mockBranch.getName())).thenReturn(Set.of(mockCommitDTO));
+        when(commitMapper.toEntity(any(), any())).thenReturn(Set.of(mockCommit));
+
+        commitService.injectBranchCommits();
+
+        verify(branchService, times(1)).saveBranches(anySet()); // It should save the branch
+    }
+
+    @Test
+    public void should_NotInjectCommitsForBranch_when_DatabaseIsAlreadyFilled() {
+        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitsCount(eq(Collections.emptyList())))
+                .thenReturn(gitHubCommitCounts);
+        when(branchCommitRepository.countBranchCommitByBranch(mockBranch)).thenReturn(10); // Already 10 commits in DB
+        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
+
+        commitService.injectBranchCommits();
+
+        verify(branchService, times(0)).saveBranches(anySet());
+    }
+
+    @Test
+    public void should_InjectCommitsOnlyForBranchesWithDifferentCommitCounts()
+            throws GitHubClientException, MappingException {
+        Branch mockBranch2 = new Branch();
+        mockBranch2.setName("dev");
+
+        Map<String, Integer> commitCounts = Map.of("master", 5, "dev", 10);
+
+        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitsCount(anyList())).thenReturn(commitCounts);
+        when(branchCommitRepository.countBranchCommitByBranch(mockBranch)).thenReturn(5);
+        when(branchCommitRepository.countBranchCommitByBranch(mockBranch2)).thenReturn(5);
+        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch, mockBranch2));
+        when(gitHubClient.getBranchCommits(anyString())).thenReturn(Set.of(mockCommitDTO));
         when(commitMapper.toEntity(any(), any())).thenReturn(Set.of(mockCommit));
 
         commitService.injectBranchCommits();
@@ -82,25 +117,16 @@ public class CommitServiceTest {
     }
 
     @Test
-    public void should_NotInjectCommitsForBranch_when_DatabaseIsAlreadyFilled() throws CommitInjectionException {
-        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitCount(eq(Collections.emptyList())))
-                .thenReturn(10);
-        when(branchCommitRepository.count()).thenReturn(10L);
+    public void should_LogInformation_when_NoBranchesToUpdate() {
+        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitsCount(eq(Collections.emptyList())))
+                .thenReturn(gitHubCommitCounts);
+        when(branchCommitRepository.countBranchCommitByBranch(mockBranch)).thenReturn(10); // Already 10 commits in DB
+        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
 
+        // Here, we just check if the log is called when no branches need to be updated.
         commitService.injectBranchCommits();
 
-        verify(branchService, times(0)).saveBranches(anySet());
-    }
-
-    @Test
-    public void should_ThrowCommitInjectionException_when_ErrorOccurs() throws GitHubClientException {
-        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitCount(eq(Collections.emptyList())))
-                .thenReturn(10);
-        when(branchCommitRepository.count()).thenReturn(0L);
-        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
-        when(gitHubClient.getBranchCommits(mockBranch.getName()))
-                .thenThrow(new GitHubClientException("Error fetching commits", null));
-
-        assertThrows(CommitInjectionException.class, () -> commitService.injectBranchCommits());
+        verify(branchService, times(0)).saveBranches(anySet()); // No updates should happen
+        // We can also check the logs if needed
     }
 }
